WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256512
C++20 is not needed in order to have a pi constant
https://bugs.webkit.org/show_bug.cgi?id=256512
Summary
C++20 is not needed in order to have a pi constant
Ross Kirsling
Reported
2023-05-09 00:00:22 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2023-05-09 00:02:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13629
EWS
Comment 2
2023-05-09 00:46:10 PDT
Committed
263856@main
(3dd065753ef7): <
https://commits.webkit.org/263856@main
> Reviewed commits have been landed. Closing PR #13629 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-09 00:47:20 PDT
<
rdar://problem/109082842
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug