REGRESSION(263796@main): C++20 is not needed in order to have a pi constant https://bugs.webkit.org/show_bug.cgi?id=256512

Unreviewed PlayStation build fix.

* Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::rotate):
* Tools/TestWebKitAPI/Tests/WebCore/DisplayListRecorderTests.cpp:
We already have `piFloat` at home.

Canonical link: https://commits.webkit.org/263856@main